--- a/Homework_3/index.html
+++ b/Homework_3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework 3: Block Based Structure</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
