--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -27,7 +27,17 @@
         <h1 class="about__title">Обо мне</h1>
         <div class="about__content">
             <img src="#" alt="Egor's Photo">
-            <p class="about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam id totam adipisci, similique molestias eaque fugiat. Perspiciatis esse at odio, laborum, molestiae nemo dicta, a perferendis suscipit debitis voluptas nesciunt.</p>
+            <div class="about__text__descriptoion">
+                <p class="about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam id totam adipisci, similique molestias eaque fugiat. Perspiciatis esse at odio, laborum, molestiae nemo dicta, a perferendis suscipit debitis voluptas nesciunt.</p>
+
+                <ul class="about__text">
+                    <li class="list__item">list-item-1</li>
+                    <li class="list__item list__item__new">list-item-2</li>
+                    <li class="list__item">list-item-3</li>
+                    <li class="list__item">list-item-4</li>
+                    <li class="list__item">list-item-5</li>
+                </ul>
+            </div>
         </div>
         <img src="#" alt="title_img">
 
@@ -46,9 +56,28 @@
     </div>
     <div class="box center">
 
-        <div class="elem elem1"></div>
-        <div class="elem elem2"></div>
-        <div class="elem elem3"></div>
+        <div class="elem elem1">One</div>
+        <div class="elem elem2">Two</div>
+        <div class="elem elem3">Three</div>
+    </div>
+    <div class="drive">
+        <div class="car car-1"></div>
+        <div class="car car-2"></div>
+        <div class="car car-3"></div>
+        <div class="car car-4"></div>
+        <div class="car car-5"></div>
+    </div>
+
+    <div class="board">
+        <div class="board__item board__item__1"></div>
+        <div class="board__item board__item__2"></div>
+        <div class="board__item board__item__3"></div>
+    </div>
+
+    <div class="hexagon">
+        <div class="hexagon__part hexagon__part-1"></div>
+        <div class="hexagon__part hexagon__part-2"></div>
+        <div class="hexagon__part hexagon__part-3"></div>
     </div>
 </body>
 
