--- a/Homework_8/index.html
+++ b/Homework_8/index.html
@@ -106,6 +106,11 @@
         <div class="button">
             <button type="#" class="bottom__button">Browse All Product</button></div>
     </div>
+
+
 </body>
+<footer>
+
+</footer>
 
 </html>
